Fix Server Code According to Review Comments for PR#6
The back end code has been revised according to the review comments to PR#6. In addition, these revisions are done in a 'server-sprint-2' branch that is a rebase from 'server-sprint-1' back to commit# acacc9b, so the branch would not include any front-end code as is supposed to.
