# server/controllers/auth.js
@@ -4,6 +4,22 @@ const ToDo = require("../models/ToDo");
 const {StatusCodes} = require("http-status-codes");
 const {BadRequestError, UnauthenticatedError} = require("../errors");
 
+const checkUsernameAndPassword = async () => {
+  const {username, password} = req.body;
+
+  if (!username || !password) {
+    throw new BadRequestError("Please provide username and password.");
+  }
+  const user = await User.findOne({username});
+  if (!user) {
+    throw new UnauthenticatedError("Invalid credentials. Please try again.");
+  }
+  const isPasswordCorrect = await user.comparePassword(password);
+  if (!isPasswordCorrect) {
+    throw new UnauthenticatedError("Invalid credentials. Please try again.");
+  }
+};
+
 const register = async (req, res) => {
   const user = await User.create({...req.body});
   const token = user.createJWT();
@@ -13,38 +29,14 @@ const register = async (req, res) => {
 };
 
 const login = async (req, res) => {
-  const {username, password} = req.body;
-
-  if (!username || !password) {
-    throw new BadRequestError("Please provide username and password.");
-  }
-  const user = await User.findOne({username});
-  if (!user) {
-    throw new UnauthenticatedError("Invalid credentials. No such user.");
-  }
-  const isPasswordCorrect = await user.comparePassword(password);
-  if (!isPasswordCorrect) {
-    throw new UnauthenticatedError("Invalid credentials. Incorrect password.");
-  }
+  await checkUsernameAndPassword();
 
   const token = user.createJWT();
   res.status(StatusCodes.OK).json({user: {username: user.username}, token});
 };
 
-const deactivate = async (req, res) => {
-  const {username, password} = req.body;
-
-  if (!username || !password) {
-    throw new BadRequestError("Please provide username and password.");
-  }
-  const user = await User.findOne({username});
-  if (!user) {
-    throw new UnauthenticatedError("Invalid credentials. No such user.");
-  }
-  const isPasswordCorrect = await user.comparePassword(password);
-  if (!isPasswordCorrect) {
-    throw new UnauthenticatedError("Invalid credentials. Incorrect password.");
-  }
+const closeAccount = async (req, res) => {
+  await checkUsernameAndPassword();
 
   const deletedTodos = await ToDo.deleteMany({owner: user._id});
   const deletedLists = await ToDoList.deleteMany({owner: user._id});
@@ -57,5 +49,5 @@ const deactivate = async (req, res) => {
 module.exports = {
   register,
   login,
-  deactivate,
+  closeAccount,
 };
