# server/routes/auth.js
@@ -1,10 +1,10 @@
 const express = require("express");
 const router = express.Router();
 
-const {register, login, deactivate} = require("../controllers/auth");
+const {register, login, closeAccount} = require("../controllers/auth");
 
 router.post("/register", register);
 router.post("/login", login);
-router.post("/deactivate", deactivate);
+router.post("/close", closeAccount);
 
 module.exports = router;
